--- a/closed-fences/index.html
+++ b/closed-fences/index.html
@@ -343,7 +343,7 @@ Some more examples of the algorithm below. Eye (blue dot), visible sides (green)
 <img src="images/img02.svg"/>
 <img src="images/img03.svg"/>
 <img src="images/img04.svg"/>
-<img src="images/img05.svg"/>
+<!--<img src="images/img05.svg"/>-->
 </div>
 
 <script type="text/x-mathjax-config">
