--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 
-        <div class="article" title="Fences">
+        <div class="article" title="Closed fences">
             <a href="closed-fences"><img class="article-image" src=
             "closed-fences/fence.png"></a>
         </div>
