--- a/closed-fences/index.html
+++ b/closed-fences/index.html
@@ -64,7 +64,7 @@ are often large number of special cases - so let's be careful!
 
 Consider the eye to be a Laser sweeping around. It is only at points
 that a transition can occur between sides that the laser is hitting.
-<br>i.e. in the image below the blue point is passed through when the laser (in red)
+i.e. in the image below the blue point is passed through when the laser (in red)
 changes sides.
 <img src="images/transition_example.png"/>
 With the above in mind we only need check the behavior of the laser around
@@ -93,7 +93,7 @@ similarly on the RHS.
 
 
 <p>
-In pseudo-code:
+In pseudo-code ($ O(N^2) $:
 </p>
 
 <pre class="prettyprint lang-python">
