--- a/closed-fences/index.html
+++ b/closed-fences/index.html
@@ -93,7 +93,7 @@ similarly on the RHS.
 
 
 <p>
-In pseudo-code ($ O(N^2) $:
+In pseudo-code - $ O(N^2) $:
 </p>
 
 <pre class="prettyprint lang-python">
